--- a/styles.css
+++ b/styles.css
@@ -3,19 +3,23 @@
 }
 
 .grid-container{
-    max-width: 900px;
-    width: 900px;
+    max-width: 800px;
+    width: 800px;
     display: grid;
     grid-template-columns: repeat(var(--gridSize), auto);
     grid-template-rows: repeat(var(--gridSize)16, auto);
 }
 
 .cell{
-    background-color: blue;
+    background-color: rgb(223, 223, 223);
     border: 1px solid black;
-    aspect-ratio: 1;    
+    aspect-ratio: 1;
 }
 
 .cell-selected{
-    background-color: lightblue;
+    background-color: rgb(70, 70, 70);
+}
+
+#reset-button{
+    margin: 10px 0px;
 }
