--- a/styles.css
+++ b/styles.css
@@ -3,18 +3,28 @@
     --selectedCellColor: rgb(10, 70, 110);
 }
 
+body{
+    display: flex;
+    gap: 50px;
+}
+
+.settings{
+    width: auto;
+}
+
 .grid-container{
     max-width: 800px;
     width: 800px;
     display: grid;
     grid-template-columns: repeat(var(--gridSize), auto);
     grid-template-rows: repeat(var(--gridSize)16, auto);
+    
 }
 
 .cell{
     background-color: rgb(223, 223, 223);
     border: 1px solid black;
-    aspect-ratio: 1;    
+    aspect-ratio: 1;
 }
 
 .cell-selected{
@@ -23,4 +33,8 @@
 
 #reset-button{
     margin: 10px 0px;
+}
+
+.select-mode-label{
+    font-weight: 700;
 }
